# mneme

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION-STATUS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: bootstrap.yml  ci.yml
adapters/antigravity/: README.md
adapters/browser-companion/: README.md
adapters/claude-code/: README.md
adapters/codex/: README.md
adapters/cursor/: README.md
adapters/openclaw/: README.md
adapters/opencode/: README.md
adapters/pi/: README.md
docs/: ADAPTERS.md  ARCHITECTURE.md  EVENT-CONTRACT.md  PLATFORM-ARCHITECTURE.md  PLATFORM-MATRIX.md  ROADMAP.md
examples/: events.json  risk-signals.json  round-observation.json
external-gpt/: PROTOCOL.md
schemas/: context-signals.schema.json  event-draft.schema.json  handover-request.schema.json  platform-manifest.schema.json  project-state.schema.json  risk-report.schema.json  round-observation.schema.json  round-receipt.schema.json  semantic-event.schema.json
scripts/: export_schemas.py  generate_platform_matrix.py
src/mneme/: __init__.py  adapter.py  canonical.py  cli.py  config.py  handover.py  models.py  platform.py  reducer.py  retrieval.py  risk.py  storage.py
tests/: conftest.py  test_determinism.py  test_handover.py  test_models.py  test_platform.py  test_reducer.py  test_retrieval.py  test_risk.py  test_storage.py
