[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme"
version = "0.1.0"
description = "Local-first, provenance-aware semantic continuity and handover engine for long agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Mneme contributors"}]
dependencies = [
  "pydantic>=2.10,<3",
  "PyYAML>=6.0,<7",
  "typer>=0.15,<1",
]

[project.urls]
Homepage = "https://github.com/repla73/mneme"
Repository = "https://github.com/repla73/mneme"
Issues = "https://github.com/repla73/mneme/issues"

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.9,<1"]

[project.scripts]
mneme = "mneme.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mneme = ["platforms/*.yaml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
